# assistant-ui-langgraph-fastapi

./: .gitignore  MASTERPLAN.md  test_server.py
backend/: .env.dev  pyproject.toml  supabase_oauth_table.sql
backend/app/: config.py  server.py
backend/app/auth/: base.py
backend/app/langgraph/: agent.py
backend/app/langgraph/tools/: __init__.py  sample.py
backend/app/langgraph/tools/google_workspace/: __init__.py  auth.py  calendar_tools.py  docs_tools.py  drive_tools.py  gmail_tools.py  meet_tools.py  sheets_tools.py  slides_tools.py
backend/app/langgraph/tools/shopify/: __init__.py  auth.py  customer_tools.py  inventory_tools.py  order_tools.py  product_tools.py
backend/app/middleware/: __init__.py  auth.py
backend/app/routers/: __init__.py  oauth_router.py
backend/app/services/: __init__.py  supabase_token_service.py
frontend/: migration.md  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/app/: MyRuntimeProvider.tsx  layout.tsx  page.tsx
frontend/app/api/assistant/: route.ts
frontend/components/: ChatShell.tsx  Message.tsx  MyAssistant.tsx  ThreadList.tsx
scripts/: apply_patch.sh
